--- a/package.json
+++ b/package.json
@@ -1,50 +1,52 @@
 {
-  "name": "parcel",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@radix-ui/react-aspect-ratio": "^1.1.7",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@tailwindcss/vite": "^4.1.14",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "daisyui": "^5.2.3",
-    "localforage": "^1.10.0",
-    "lucide-react": "^0.545.0",
-    "match-sorter": "^8.1.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-hook-form": "^7.65.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4",
-    "sort-by": "^1.2.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "tw-animate-css": "^1.4.0",
-    "vite": "^7.1.7"
-  }
+   "name": "parcel",
+   "private": true,
+   "version": "0.0.0",
+   "type": "module",
+   "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "lint": "eslint .",
+      "preview": "vite preview"
+   },
+   "dependencies": {
+      "@radix-ui/react-aspect-ratio": "^1.1.7",
+      "@radix-ui/react-avatar": "^1.1.10",
+      "@radix-ui/react-dialog": "^1.1.15",
+      "@radix-ui/react-dropdown-menu": "^2.1.16",
+      "@radix-ui/react-label": "^2.1.7",
+      "@radix-ui/react-select": "^2.2.6",
+      "@radix-ui/react-separator": "^1.1.7",
+      "@radix-ui/react-slot": "^1.2.3",
+      "@radix-ui/react-tooltip": "^1.2.8",
+      "@tailwindcss/vite": "^4.1.14",
+      "axios": "^1.12.2",
+      "class-variance-authority": "^0.7.1",
+      "clsx": "^2.1.1",
+      "daisyui": "^5.2.3",
+      "firebase": "^12.4.0",
+      "localforage": "^1.10.0",
+      "lucide-react": "^0.545.0",
+      "match-sorter": "^8.1.0",
+      "react": "^19.1.1",
+      "react-dom": "^19.1.1",
+      "react-hook-form": "^7.65.0",
+      "react-icons": "^5.5.0",
+      "react-router-dom": "^7.9.4",
+      "sort-by": "^1.2.0",
+      "tailwind-merge": "^3.3.1",
+      "tailwindcss": "^4.1.14"
+   },
+   "devDependencies": {
+      "@eslint/js": "^9.36.0",
+      "@types/react": "^19.1.16",
+      "@types/react-dom": "^19.1.9",
+      "@vitejs/plugin-react": "^5.0.4",
+      "eslint": "^9.36.0",
+      "eslint-plugin-react-hooks": "^5.2.0",
+      "eslint-plugin-react-refresh": "^0.4.22",
+      "globals": "^16.4.0",
+      "tw-animate-css": "^1.4.0",
+      "vite": "^7.1.7"
+   }
 }
