--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "clsx": "^2.1.1",
       "daisyui": "^5.2.3",
       "firebase": "^12.4.0",
+      "ldrs": "^1.1.7",
       "localforage": "^1.10.0",
       "lucide-react": "^0.545.0",
       "match-sorter": "^8.1.0",
