--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
       "localforage": "^1.10.0",
       "lucide-react": "^0.545.0",
       "match-sorter": "^8.1.0",
+      "next-themes": "^0.4.6",
       "react": "^19.1.1",
       "react-dom": "^19.1.1",
       "react-hook-form": "^7.65.0",
       "react-icons": "^5.5.0",
       "react-router-dom": "^7.9.4",
+      "sonner": "^2.0.7",
       "sort-by": "^1.2.0",
       "tailwind-merge": "^3.3.1",
       "tailwindcss": "^4.1.14"
