--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
       "@radix-ui/react-slot": "^1.2.3",
       "@radix-ui/react-tooltip": "^1.2.8",
       "@tailwindcss/vite": "^4.1.14",
+      "@tanstack/react-query": "^5.90.3",
       "axios": "^1.12.2",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
       "daisyui": "^5.2.3",
+      "date-fns": "^4.1.0",
       "firebase": "^12.4.0",
       "ldrs": "^1.1.7",
       "localforage": "^1.10.0",
