--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "@smastrom/react-rating": "^1.5.0",
       "@tailwindcss/vite": "^4.1.14",
       "@tanstack/react-query": "^5.90.3",
+      "apexcharts": "^5.3.5",
       "axios": "^1.12.2",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
@@ -34,6 +35,7 @@
       "match-sorter": "^8.1.0",
       "next-themes": "^0.4.6",
       "react": "^19.1.1",
+      "react-apexcharts": "^1.8.0",
       "react-dom": "^19.1.1",
       "react-hook-form": "^7.65.0",
       "react-icons": "^5.5.0",
