--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
       "@radix-ui/react-slot": "^1.2.3",
       "@radix-ui/react-tooltip": "^1.2.8",
       "@smastrom/react-rating": "^1.5.0",
+      "@stripe/react-stripe-js": "^5.2.0",
+      "@stripe/stripe-js": "^8.1.0",
       "@tailwindcss/vite": "^4.1.14",
       "@tanstack/react-query": "^5.90.3",
       "apexcharts": "^5.3.5",
@@ -36,11 +38,13 @@
       "next-themes": "^0.4.6",
       "react": "^19.1.1",
       "react-apexcharts": "^1.8.0",
+      "react-confetti": "^6.4.0",
       "react-dom": "^19.1.1",
       "react-hook-form": "^7.65.0",
       "react-icons": "^5.5.0",
       "react-router-dom": "^7.9.4",
       "react-simple-star-rating": "^5.1.7",
+      "react-use": "^17.6.0",
       "sonner": "^2.0.7",
       "sort-by": "^1.2.0",
       "tailwind-merge": "^3.3.1",
