--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
       "@radix-ui/react-select": "^2.2.6",
       "@radix-ui/react-separator": "^1.1.7",
       "@radix-ui/react-slot": "^1.2.3",
+      "@radix-ui/react-toggle": "^1.1.10",
       "@radix-ui/react-tooltip": "^1.2.8",
       "@smastrom/react-rating": "^1.5.0",
       "@stripe/react-stripe-js": "^5.2.0",
@@ -39,6 +40,7 @@
       "react": "^19.1.1",
       "react-apexcharts": "^1.8.0",
       "react-confetti": "^6.4.0",
+      "react-countup": "^6.5.3",
       "react-dom": "^19.1.1",
       "react-hook-form": "^7.65.0",
       "react-icons": "^5.5.0",
