--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
       "axios": "^1.12.2",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
-      "daisyui": "^5.2.3",
       "date-fns": "^4.1.0",
       "firebase": "^12.4.0",
       "ldrs": "^1.1.7",
@@ -49,19 +48,23 @@
       "react-use": "^17.6.0",
       "sonner": "^2.0.7",
       "sort-by": "^1.2.0",
-      "tailwind-merge": "^3.3.1",
-      "tailwindcss": "^4.1.14"
+      "tailwind-merge": "^3.3.1"
    },
    "devDependencies": {
       "@eslint/js": "^9.36.0",
+      "@tailwindcss/postcss": "^4.1.16",
       "@types/react": "^19.1.16",
       "@types/react-dom": "^19.1.9",
       "@vitejs/plugin-react": "^5.0.4",
+      "autoprefixer": "^10.4.21",
+      "daisyui": "^5.3.10",
       "eslint": "^9.36.0",
       "eslint-plugin-react-hooks": "^5.2.0",
       "eslint-plugin-react-refresh": "^0.4.22",
       "globals": "^16.4.0",
+      "postcss-preset-env": "^10.4.0",
+      "tailwindcss": "^4.1.16",
       "tw-animate-css": "^1.4.0",
-      "vite": "^7.1.7"
+      "vite": "^7.1.12"
    }
 }
